proxy/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: ingress_http
              http_filters:
                - name: envoy.filters.http.router
                  typed_config: 
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: local_route
                virtual_hosts:
                  - name: backend
                    domains: ["*"]
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          prefix_rewrite: "/v0/"
                          cluster: remote

  clusters:
    - name: remote
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      health_checks:
        timeout: 2s
        interval: 10s
        unhealthy_threshold: 1
        healthy_threshold: 1
        http_health_check:
          path: "/health"
      load_assignment:
        cluster_name: local
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: edgeproxy-test-server-1
                    port_value: 8080
            - endpoint:
                address:
                  socket_address:
                    address: edgeproxy-test-server-2
                    port_value: 8080
            - endpoint:
                address:
                  socket_address:
                    address: edgeproxy-test-server-3
                    port_value: 8080
            - endpoint:
                address:
                  socket_address:
                    address: edgeproxy-test-server-4
                    port_value: 8080

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9090
